fix: adjust pokemon-move-name spacing to avoid overlap

--- a/public/css/pokemon.css
+++ b/public/css/pokemon.css
@@ -1079,7 +1079,7 @@ nav div p {
   height: 140px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 10px;
+  column-gap: 5px;
   grid-template-rows: 1.5rem;
   overflow-y: scroll;
 }
